[package]
name = "tunnet-save-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_egui = "0.25"
bevy_panorbit_camera = "0.16.1"
block-mesh = "0.2.0"
rfd = "0.13.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = "0.26.2"
strum_macros = "0.26.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
